--- a/angular-client/src/styles.scss
+++ b/angular-client/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.btn {
+  margin-top: 10px !important;
+  margin-bottom: 10px !important;
+}
+
+.p-r-s {
+  padding-right: 5px;
+}
