--- a/angular-client/src/app/views/vehicle-overview/vehicle-overview.component.html
+++ b/angular-client/src/app/views/vehicle-overview/vehicle-overview.component.html
@@ -4,13 +4,13 @@
 </div>
 
 <!-- https://stackblitz.com/angular/dnbermjydavk?file=app%2Ftable-overview-example.html -->
-<div class="example-header">
+<div class="header">
     <mat-form-field>
         <input matInput #filterInput (keyup)="applyFilter(filterInput.value)" placeholder="Filter">
     </mat-form-field>
 </div>
 
-<div class="example-container mat-elevation-z8">
+<div class="container mat-elevation-z8">
 
     <mat-table [dataSource]="dataSource" matSort>
 
