--- a/angular-client/src/app/views/vehicle-overview/vehicle-overview.component.scss
+++ b/angular-client/src/app/views/vehicle-overview/vehicle-overview.component.scss
@@ -1,10 +1,10 @@
-.example-container {
+.container {
   display: flex;
   flex-direction: column;
   min-width: 300px;
 }
 
-.example-header {
+.header {
   min-height: 64px;
   padding: 8px 24px 0;
 }
