--- a/angular-client/src/app/views/vehicle-usage-overview/vehicle-usage-overview.component.html
+++ b/angular-client/src/app/views/vehicle-usage-overview/vehicle-usage-overview.component.html
@@ -49,7 +49,7 @@
         </mat-row>
     </mat-table>
 
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[20, 50, 100]"></mat-paginator>
 </div>
 
 <button class="btn" mat-flat-button color="primary"  (click)="openDialog()"> <mat-icon>add</mat-icon> Neues Fahrzeug in Bestand aufnehmen</button>
